@@ -13,7 +13,7 @@ directory for your Oddmuse Wiki.
 =cut
 package OddMuse;
 
-$ModulesDescription .= '<p>$Id: footnotes.pl,v 1.9 2008/10/01 06:21:46 leycec Exp $</p>';
+$ModulesDescription .= '<p>$Id: footnotes.pl,v 1.10 2009/05/11 02:28:45 leycec Exp $</p>';
 
 # ....................{ CONFIGURATION                      }....................
 
@@ -103,7 +103,7 @@ explicit markup, and the second via implicit fallback; these are:
 =back
 
 =cut
-$FootnotesPattern = '\&lt;footnotes\&gt;[ \t]*\n?';
+$FootnotesPattern = '\&lt;footnotes\&gt;[ \t]*(\n|$)';
 
 =head2 $FootnotesHeaderText
 
@@ -119,7 +119,7 @@ sub FootnotesInit {
   @FootnoteList = ();
 
   if (not defined $FootnotePattern) {
-    $FootnotePattern = defined &CreoleRule ? '\(\((.*?)\)\)' : '\{\{(.*?)\}\}';
+    $FootnotePattern = defined &CreoleRule ? '\(\((.+?)\)\)' : '\{\{(.+?)\}\}';
   }
 }
 
@@ -137,8 +137,89 @@ installed):
 
 C<$FootnoteText> is the text for that footnote. This extension replaces that
 text (and enclosing parentheses) with a numbered link to the footnote in the set
-of all footnotes for that page - usually, at the foot of the page.
+of all footnotes for that page - usually, at the foot of the page. As example of
+a citation for Jared Diamond's "Collapse: How Societies Choose to Fail or
+Succeed" (2005), you might write:
 
+  History suggests that societal decline does not result from a single cause,
+  but rather the confluence of several interwoven causes.((Diamond, Jared. 2005.
+  **Collapse: How Societies Choose to Fail or Succeed.** %%Viking, New York.%%))
+
+Note that the example above embeds Wiki Creole syntax within the footnote
+definition itself. This is perfectly legal and, in fact, encouraged.
+
+=head3 CREATING MULTIPLE FOOTNOTES
+
+footnotes also handles markup resembling:
+
+  (($FirstFootnoteText))(($NextFootnoteText))
+
+C<$FirstFootnoteText> and C<$NextFootnoteText> are the text for two adjacent
+footnotes. These footnote definitions will be handled and displayed as above,
+except that the numbered link for the first footnote will be visually delimited
+from the numbered link for the footnote that follows it with a ", ". As example,
+you might write:
+
+  History suggests that societal decline does not result from a single cause,
+  but rather the confluence of several interwoven causes.((Diamond, Jared. 2005.
+  **Collapse: How Societies Choose to Fail or Succeed.** %%Viking, New York.%%))
+  ((Tainter, Joseph. 1988. **The Collapse of Complex Societies.** %%Cambridge
+  Univ Press, Cambridge, UK.%%))
+
+=head3 REFERENCING ANOTHER FOOTNOTE
+
+footnotes also handles marking resembling:
+
+  (($FootnoteNumber))
+
+C<$FootnoteNumber> is the number for another footnote. This module assigns each
+footnote definition a unique number, beginning at "1". Thus, this markup allows
+you to reference one footnote definition in multiple places throughout a page.
+As example, you might write:
+    
+  History suggests that societal decline does not result from a single cause,
+  but rather the confluence of several interwoven causes.((Diamond, Jared. 2005.
+  **Collapse: How Societies Choose to Fail or Succeed.** %%Viking, New York.%%))
+
+  Such causes include a human-dominated ecosystem moving to a brittle, non-
+  resilient state due to climatological changes.((Weiss H, Bradley RS. 2001.
+  **What drives societal collapse?** %%Science 291:609–610.%%))
+
+  Societal decline only occurs, however, when socio-ecological systems become
+  brittle and incapable of adaptation.((1))
+
+The final footnote, above, is a reference to the first footnote definition
+rather than a new footnote definition.
+  
+=head3 REFERENCING A RANGE OF OTHER FOOTNOTES
+
+footnotes also handles marking resembling:
+
+  (($FirstFootnoteNumber-$LastFootnoteNumber))
+
+C<$FirstFootnoteNumber> and C<$LastFootnoteNumber> are the numbers for two
+other footnotes. Thus, this markup allows you to reference a range of footnote
+definitions in multiple places throughout a page. As example, you might write:
+
+  History suggests that societal decline does not result from a single cause,
+  but rather the confluence of several interwoven causes.((Diamond, Jared. 2005.
+  **Collapse: How Societies Choose to Fail or Succeed.** %%Viking, New York.%%))
+
+  Such causes include a human-dominated ecosystem moving to a brittle, non-
+  resilient state due to climatological changes((Weiss H, Bradley RS. 2001.
+  **What drives societal collapse?** %%Science 291:609–610.%%)), external
+  forcings((Tainter, Jared. 2006. **Social complexity and sustainability.**
+  %%Ecol Complex 3:91–103.%%)), or internal pressures((Cullen HM, et al. 2000.
+  **Climate change and the collapse of the Akkadian empire: Evidence from the
+  deep sea.** %%Geology 28:379–382.%%)).
+
+  Societal decline only occurs, however, when socio-ecological systems become
+  brittle and incapable of adaptation.((1-2))((4))
+
+The final footnotes, above, are a reference to the first two footnote
+definitions followed by a reference to the fourth footnote definition. This
+module visually renders this disjoint list like: "1-2, 4".
+  
 =head3 CREATING THE SET OF FOOTNOTES
 
 footnotes also handles markup resembling:
@@ -148,24 +229,58 @@ footnotes also handles markup resembling:
 This extension replaces that markup with the set of all footnotes for that page.
 Note that, if that page has no such markup, this extension automatically places
 the set of all footnotes for that page between the content and footer for that
-page. This may or not be what you want, however.
+page. (This may or not be what you want, of course.)
 
 =cut
 sub FootnotesRule {
-  if (m/\G($FootnotePattern)(?=($FootnotePattern)?)/gcos) {
+  # A "((...))" footnote anywhere in a page.
+  #
+  # Footnotes and the set of all footnotes must be marked so as to ensure their
+  # reevaluation, as each of the footnotes might contain Wiki markup requiring
+  # reevaluation (like, say, free links).
+  if (m/\G($FootnotePattern)(?=([ \t]*$FootnotePattern)?)/gcos) {
     Dirty($1);  # do not cache the prefixing "\G"
-                 push(@FootnoteList, $2);
-    my $footnote_number = @FootnoteList;
+    my $footnote_text = $2;
     my $is_adjacent_footnote = defined $3;
 
-    print $q->a({-href=> '#footnotes'.$footnote_number,
-                 -name=>  'footnote' .$footnote_number,
-                 -title=> $2,
-                 -class=> 'footnote'
-                }, $footnote_number.($is_adjacent_footnote ? ', ' : ''));
+    # A number range (e.g., "2-5") of references to other footnotes.
+    if ($footnote_text =~ m/^(\d+)-(\d+)$/co) {
+      my ($footnote_number_first, $footnote_number_last) = ($1, $2);
+      # '&#x2013;', below, is the HTML entity for a Unicode en-dash.
+      print $q->a({-href=> '#footnotes' .$footnote_number_first,
+                   -title=> 'Footnote #'.$footnote_number_first,
+                   -class=> 'footnote'
+                  }, $footnote_number_first.'&#x2013;')
+           .$q->a({-href=> '#footnotes' .$footnote_number_last,
+                   -title=> 'Footnote #'.$footnote_number_last,
+                   -class=> 'footnote'
+                  }, $footnote_number_last.($is_adjacent_footnote ? ', ' : ''));
+    }
+    # A number (e.g., "5") implying reference to another footnote.
+    elsif ($footnote_text =~ m/^(\d+)$/co) {
+      my $footnote_number = $1;
+      print $q->a({-href=> '#footnotes' .$footnote_number,
+                   -title=> 'Footnote #'.$footnote_number,
+                   -class=> 'footnote'
+                  }, $footnote_number.($is_adjacent_footnote ? ', ' : ''));
+    }
+    # Otherwise, a new footnote definition.
+    else {
+      push(@FootnoteList, $footnote_text);
+      my $footnote_number = @FootnoteList;
+      print $q->a({-href=> '#footnotes'.$footnote_number,
+                   -name=>  'footnote' .$footnote_number,
+                   -title=> 'Footnote: '.  # Truncate link titles to one line.
+                     (  length($footnote_text) >  48
+                      ? substr($footnote_text, 0, 44).'...'
+                      :        $footnote_text),
+                   -class=> 'footnote'
+                  }, $footnote_number.($is_adjacent_footnote ? ', ' : ''));
+    }
 
     return '';
   }
+  # The "<footnotes>" list of all footnotes at the foot of a page.
   elsif ($bol && m/\G($FootnotesPattern)/gcios) {
     Clean(CloseHtmlEnvironments());
     Dirty($1);  # do not cache the prefixing "\G"
@@ -175,9 +290,6 @@ sub FootnotesRule {
       PrintFootnotes();
       Clean(AddHtmlEnvironment('p')); # if dirty block is looked at later, this will disappear
       ($_, pos) = ($old_, $oldpos);   # restore \G (assignment order matters!)
-
-      # Empty the footnotes array; this prevents the fallback.
-      @FootnoteList = ();
     }
 
     return '';
@@ -210,24 +322,30 @@ Prints the list of footnotes.
 
 =cut
 sub PrintFootnotes() {
-  print '<div class="footnotes">'.$q->h2(T($FootnotesHeaderText));
+  print
+     $q->start_div({-class=> 'footnotes'})
+    .$q->h2(T($FootnotesHeaderText));
 
   # Don't use <ol>, because we want to link from the number back to
   # its page location.
           my $footnote_number = 1;
   foreach my $footnote (@FootnoteList) {
-    print '<div class="footnote">'
-      .$q->a({-class=> 'backlink',
-               -name=>  'footnotes'.$footnote_number,
-               -href=> '#footnote' .$footnote_number}, $footnote_number.'.')
+    print
+       $q->start_div({-class=> 'footnote'})
+      .$q->a({-class=> 'footnote_backlink',
+              -name=>  'footnotes'.$footnote_number,
+              -href=> '#footnote' .$footnote_number}, $footnote_number.'.')
       .' ';
     ApplyRules($footnote, 1);
-    print '</div>';
+    print $q->end_div();
 
     $footnote_number++;
   }
 
-  print '</div>';
+  print $q->end_div();
+
+  # Empty the footnotes, now; this prevents our calling the fallback, later.
+  @FootnoteList = ();
 }
 
 =head1 COPYRIGHT AND LICENSE
